Fix calendar view on small devices (#273)

--- a/themes/roomify/roomify_travel/assets/sass/components/_datepicker.scss
+++ b/themes/roomify/roomify_travel/assets/sass/components/_datepicker.scss
@@ -109,3 +109,9 @@
     font-weight: 400;
   }
 }
+
+#ui-datepicker-div {
+  @media (max-width: 620px) {
+    width: 20em !important;
+  }
+}
